--- a/Certifications/Responsive_Web_Design/Projects/Survey_Form/styles.css
+++ b/Certifications/Responsive_Web_Design/Projects/Survey_Form/styles.css
@@ -1,21 +1,11 @@
 body {
-    background-color: black;
-    color: white;
-    width: 100%;
-    height: 100vh;
-    margin: 0;
-    font-family: Tahoma;
-    font-size: 16px;
-}
-
-p:first-of-type {
-  width: 80vw;
-}
-
-.inline {
-  width: unset;
-  margin: 0 0.5em 0 0;
-  vertical-align: middle;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  background-color: black;
+  color: white;
+  font-family: Verdana;
+  font-size: 16px;
 }
 
 h1, p {
@@ -33,6 +23,78 @@ form {
 
 fieldset {
   border: none;
-  padding: 2rem 0;
-  border-bottom: 3px solid #3b3b4f;
+  padding: 1rem 0;
+  border-bottom: 5px solid red;
+}
+
+fieldset:last-of-type {
+  border-bottom: none;
+}
+
+label {
+  display: block;
+  margin: 0.5rem 0;
+}
+
+input,
+textarea,
+select {
+  margin: 10px 0 0 0;
+  width: 100%;
+  min-height: 2em;
+  font-family: Tahoma;
+  font-size: 16px;
+}
+
+input, textarea, select {
+  background-color: black;
+  border: 2px solid white;
+}
+
+input {
+  color: #ffffff;
+}
+
+textarea {
+  font-style:italic;
+  color: white;
+}
+
+select {
+  color: #ffffff;
+}
+
+.inline {
+  width: unset;
+  margin: 0 0.5em 0 0;
+  vertical-align: middle;
+}
+
+input[type="submit"] {
+  display: block;
+  width: 60%;
+  margin: 1em auto;
+  height: 2em;
+  font-size: 1.1rem;
+  background-color: black;
+  border-color: white;
+  min-width: 300px;
+}
+
+input[type="submit"]:hover {
+  background-color: red;
+}
+
+input[type="submit"]:active {
+  background-color: white;
+  border: 4px solid red;
+  color: black
+}
+
+input[type='radio'], input[type='checkbox'] {
+  accent-color: red;
+}
+
+.make_red:checked, .make_red:active {
+  background-color: red;
 }
